--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,1 +1,111 @@
-<p class="asd">dashboard works!</p>
+<h5>Basic</h5>
+<al-button label="Submit"></al-button>
+<al-button label="Disabled" disabled="true"></al-button>
+<al-button label="Link" styleClass="p-button-link"></al-button>
+
+<h5>Icons</h5>
+<al-button icon="pi pi-check"></al-button>
+<al-button label="Submit" icon="pi pi-check"></al-button>
+<al-button label="Submit" icon="pi pi-check" iconPos="right"></al-button>
+
+<h5>Severities</h5>
+<button alButton pRipple type="button" label="Primary"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-secondary"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-success"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-info"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-warning"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-help"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-danger"></button>
+
+<h5>Raised Buttons</h5>
+<button alButton pRipple type="button" label="Primary" class="p-button-raised"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-raised p-button-secondary"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-raised p-button-success"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-raised p-button-info"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-raised p-button-warning"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-raised p-button-help"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-raised p-button-danger"></button>
+
+<h5>Rounded Buttons</h5>
+<button alButton pRipple type="button" label="Primary" class="p-button-rounded"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-rounded p-button-secondary"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-rounded p-button-success"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-rounded p-button-info"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-rounded p-button-warning"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-rounded p-button-help"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-rounded p-button-danger"></button>
+
+<h5>Text Buttons</h5>
+<button alButton pRipple type="button" label="Primary" class="p-button-text"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-secondary p-button-text"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-success p-button-text"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-info p-button-text"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-warning p-button-text"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-help p-button-text"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-danger p-button-text"></button>
+<button alButton pRipple type="button" label="Plain" class="p-button-text p-button-plain"></button>
+
+<h5>Raised Text Buttons</h5>
+<button alButton pRipple type="button" label="Primary" class="p-button-raised p-button-text"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-raised p-button-secondary p-button-text"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-raised p-button-success p-button-text"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-raised p-button-info p-button-text"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-raised p-button-warning p-button-text"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-raised p-button-help p-button-text"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-raised p-button-danger p-button-text"></button>
+<button alButton pRipple type="button" label="Plain" class="p-button-raised p-button-text p-button-plain"></button>
+
+<h5>Outlined Buttons</h5>
+<button alButton pRipple type="button" label="Primary" class="p-button-outlined"></button>
+<button alButton pRipple type="button" label="Secondary" class="p-button-outlined p-button-secondary"></button>
+<button alButton pRipple type="button" label="Success" class="p-button-outlined p-button-success"></button>
+<button alButton pRipple type="button" label="Info" class="p-button-outlined p-button-info"></button>
+<button alButton pRipple type="button" label="Warning" class="p-button-outlined p-button-warning"></button>
+<button alButton pRipple type="button" label="Help" class="p-button-outlined p-button-help"></button>
+<button alButton pRipple type="button" label="Danger" class="p-button-outlined p-button-danger"></button>
+
+<h5>Rounded Icon Buttons</h5>
+<button alButton pRipple type="button" icon="pi pi-check" class="p-button-rounded"></button>
+<button alButton pRipple type="button" icon="pi pi-bookmark" class="p-button-rounded p-button-secondary"></button>
+<button alButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-success"></button>
+<button alButton pRipple type="button" icon="pi pi-user" class="p-button-rounded p-button-info"></button>
+<button alButton pRipple type="button" icon="pi pi-bell" class="p-button-rounded p-button-warning"></button>
+<button alButton pRipple type="button" icon="pi pi-heart" class="p-button-rounded p-button-help"></button>
+<button alButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger"></button>
+
+<h5>Rounded Text Icon Buttons</h5>
+<button alButton pRipple type="button" icon="pi pi-check" class="p-button-rounded p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-bookmark" class="p-button-rounded p-button-secondary p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-success p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-user" class="p-button-rounded p-button-info p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-bell" class="p-button-rounded p-button-warning p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-heart" class="p-button-rounded p-button-help p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-text"></button>
+<button alButton pRipple type="button" icon="pi pi-filter" class="p-button-rounded p-button-text p-button-plain"></button>
+
+<h5>Rounded and Outlined Icon Buttons</h5>
+<button alButton pRipple type="button" icon="pi pi-check" class="p-button-rounded p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-bookmark" class="p-button-rounded p-button-secondary p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-success p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-user" class="p-button-rounded p-button-info p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-bell" class="p-button-rounded p-button-warning p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-heart" class="p-button-rounded p-button-help p-button-outlined"></button>
+<button alButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-outlined"></button>
+
+<h5>Badges</h5>
+<al-button label="Emails" badge="8"></al-button>
+<al-button label="Messages" icon="pi pi-users" styleClass="p-button-warning" badge="8" badgeClass="p-badge-danger"></al-button>
+
+<h5>Button Set</h5>
+<span class="p-buttonset">
+    <button alButton pRipple label="Save" icon="pi pi-check"></button>
+    <button alButton pRipple label="Delete" icon="pi pi-trash"></button>
+    <button alButton pRipple label="Cancel" icon="pi pi-times"></button>
+</span>
+
+<h5>Sizes</h5>
+<div class="sizes">
+    <al-button label="Small" icon="pi pi-check" styleClass="p-button-sm"></al-button>
+    <al-button label="Normal" icon="pi pi-check" styleClass="p-button"></al-button>
+    <al-button label="Large" icon="pi pi-check" styleClass="p-button-lg"></al-button>
+</div>
