--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,43 @@
-<p>header works!</p>
+<p-sidebar [(visible)]="displaySidebar" class="sidebarMenu">
+    <div class="sidebarMenuTitle"><img src="{{imagePath}}logofoot.png" alt="logo" /></div>
+    <p-tree class="sidebarMenuTree" metaKeySelection="false" [value]="myMenu" selectionMode="single" (onNodeSelect)="nodeSelect($event)">
+        <ng-template let-node pTemplate="picture">
+            <img [attr.src]="node.icon" class="sidebarIconTree" alt="{{node.label}}" *ngIf="node.icon" />
+            <span>{{node.label}}</span>
+        </ng-template>
+        <ng-template let-node pTemplate="default">
+            <span>{{node.label}}</span>
+        </ng-template>
+    </p-tree>
+  <div class="tempLogout">
+    <button (click)="logout()" ><fa-icon [icon]="faSignOutAlt"></fa-icon> Выйти</button>
+  </div>
+
+</p-sidebar>
+
+<div class="topMainLine">
+    <!-- <button (click)="displaySidebar = true" class="mainSideMenu"><fa-icon [icon]="faThList"></fa-icon></button>
+
+    <div class="firstTab" (click)="clickDashboard()">
+      <fa-icon [icon]="faTh"></fa-icon>
+      <div class="tabName" >Dashboard</div>
+    </div>
+    <div style="width: calc(100% - 240px)">
+        <p-scrollPanel #scrollPanel class="topTabScrollPanel">
+            <ul mouseWheel class="topLineTab" style="margin-bottom: 0px;margin-top: 0px;" (mouseWheelUp)="onScrollTabsUp()" (mouseWheelDown)="onScrollTabsDown()" #scrollTabItems>
+                <li [ngClass]="{active:tab.active}" *ngFor="let tab of topTabs; let index = index">
+                    <div class="tabName" (click)="clickTab(tab)">{{tab.name}}</div>
+                    <button class="topTabCloseIcon" *ngIf="!!tab.canClose" (click)="closeTab($event, index)">
+                    <fa-icon [icon]="faTimes"></fa-icon>
+                </button>
+                </li>
+            </ul>
+        </p-scrollPanel>
+    </div>
+
+
+    <div class="tabTopBtn" >
+       <button (click)="onScrollTabsUp()"> <fa-icon [icon]="faChevronLeft"></fa-icon> </button>
+       <button (click)="onScrollTabsDown()"> <fa-icon [icon]="faChevronRight"></fa-icon> </button>
+    </div> -->
+</div>
