--- a/src/styles/feature/_menu-tile.scss
+++ b/src/styles/feature/_menu-tile.scss
@@ -1,4 +1,289 @@
+@import 'abstract/variables';
+
 .hide{
-    display: none;
-  }
+  display: none;
+}
   
+.dashcardTitle {
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border-radius: 10px 10px 0 0;
+  cursor: move;
+  font-size: $fontSize;
+  text-transform: uppercase;
+  font-weight: 700;
+  //text-shadow: 0 1px 0 $white;
+  //color: $fontColor;
+  color: $white;
+}
+
+.dashMenuList {
+  list-style: none;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: flex-start;
+  padding: 10px;
+  border-top: 1px solid $white;
+  margin: 0;
+}
+
+.dashItemBox {
+  background-color: rgba(255, 255, 255, .4);
+  width: 105px;
+  height: 105px;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+  position: relative;
+  margin: 5px;
+  color: $fontColor;
+  transition: all linear 0.05s;
+  &:hover {
+      background-color: #ffffff;
+      transform: scale(1.04);
+      box-shadow: 0 4px 0px rgba(0, 0, 0, 0.2);
+      transform: translateY(-4px);
+  }
+  &.active {
+      color: $white;
+      transform: scale(1);
+      img {
+          filter: contrast(0%) brightness(300%);
+      }
+      .dashItemBoxTitle {
+          color: $white;
+          text-shadow: none;
+      }
+  }
+  .dashItemBoxTitle {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      word-break: break-word;
+      cursor: pointer;
+      text-align: center;
+      font-size: $fontSize;
+      font-weight: 400;
+      text-shadow: 0 1px 0 $white;
+      color: $fontColor;
+      padding: 4px;
+      line-height: 1rem;
+      letter-spacing: -0.5px;
+      img {
+          margin: 5px auto;
+      }
+  }
+}
+
+.dashChildContainer {
+  border-top: 1px solid #C1C7D2;
+  border-bottom: 1px solid #C1C7D2;
+  margin-left: -10px;
+  margin-right: -10px;
+  width: 370px;
+  background-color: $white;
+  .pi {
+      font-size: 0.7rem;
+  }
+  .ui-tree {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      .ui-tree-container .ui-treenode .ui-treenode-content .ui-treenode-label {
+          padding: 0;
+          margin: 0;
+          width: 100%;
+          display: block;
+          font-size: $fontSize;
+          .dashChildItem {
+              padding: 10px 10px 10px 20px;
+              width: 100%;
+              display: block;
+              color: $fontColor;
+              cursor: pointer;
+          }
+      }
+  }
+}
+
+.childDashIcon {
+  transform: scaleY(-1);
+  margin: 0 10px;
+  color: #aaa;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+:host.card_1 {
+  border-color: $catalogColor;
+  .dashcardTitle {
+      border-bottom: 1px solid $catalogColor;
+      background: $catalogColor;
+  }
+  .dashItemBox {
+      border-color: $catalogColor;
+      &.active {
+          background-color: $catalogColor;
+          .dashcardTitle {
+              color: $white;
+              text-shadow: none;
+          }
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $catalogColor;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
+
+:host.card_2 {
+  border-color: $goodsColor;
+  .dashcardTitle {
+      border-bottom: 1px solid $goodsColor;
+      background: $goodsColor;
+  }
+  .dashItemBox {
+      border-color: $goodsColor;
+      &.active {
+          background-color: $goodsColor;
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $goodsColor;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
+
+:host.card_3 {
+  border-color: $leftoversColor;
+  .dashcardTitle {
+      border-bottom: 1px solid $leftoversColor;
+      background: $leftoversColor
+  }
+  .dashItemBox {
+      border-color: $leftoversColor;
+      &.active {
+          background-color: $leftoversColor;
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $leftoversColor;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
+
+:host.card_4 {
+  border-color: $documentsColor;
+  .dashcardTitle {
+      border-bottom: 1px solid $documentsColor;
+      background: $documentsColor;
+  }
+  .dashItemBox {
+      border-color: $documentsColor;
+      &.active {
+          background-color: $documentsColor;
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $documentsColor;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
+
+:host.card_5 {
+  border-color: $analyticsColor;
+  .dashcardTitle {
+      border-bottom: 1px solid $analyticsColor;
+      background: $analyticsColor;
+  }
+  .dashItemBox {
+      border-color: $analyticsColor;
+      &.active {
+          background-color: $analyticsColor;
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $analyticsColor;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
+
+:host.card_6 {
+  border-color: $color1;
+  .dashcardTitle {
+      border-bottom: 1px solid $color1;
+      background: $color1;
+  }
+  .dashItemBox {
+      border-color: $color1;
+      &.active {
+          background-color: $color1;
+      }
+  }
+  .dashChildContainer {
+      .ui-tree {
+          .dashChildItem {
+              &:hover,
+              &:focus {
+                  background-color: $color1;
+                  span {
+                      color: $white;
+                  }
+              }
+          }
+      }
+  }
+}
