--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<header>
+    <al-header style="width: 100%;"></al-header>
+</header>
+<main>
+    <router-outlet></router-outlet>
+</main>
+
+<footer>
+    <al-footer></al-footer>
+</footer>
