--- a/src/styles/themes/_default.scss
+++ b/src/styles/themes/_default.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -334,8 +338,6 @@ footer {
         }
     }
 }
-
-
 
 // Toolbar
 .table_toolbar {
