--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<div class="footerbar">
+    <div class="langfooter">
+        <al-lang-select></al-lang-select>
+    </div>
+    <div>
+        <ul>
+            <li><b>Пользователь:</b> <span>UserName</span></li>
+            <li><b>Сервер:</b> <span>ServerName</span></li>
+            <li><b>Сдача последнего чека:</b> <span>DataTime</span></li>
+        </ul>
+    </div>
+    <div class="logofoot">
+        <img src="{{imagePath}}logofoot.png" alt="logo" />
+    </div>
+</div>
